--- a/matrimony_app/pubspec.yaml
+++ b/matrimony_app/pubspec.yaml
@@ -46,6 +46,21 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
+#  flutter_native_splash: ^2.3.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/profile.png"  # ✅ Path to your new icon
+  adaptive_icon_background: "#ffa500"  # ✅ (Optional) Background color for Android adaptive icon
+  adaptive_icon_foreground: "assets/images/profile.png" # ✅ (Optional)
+
+#flutter_native_splash:
+#  image: assets/images/profile_gif.gif  # ✅ Use GIF here
+#  android: true
+#  ios: true
+#  fullscreen: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
