UI change Matrimony App

--- a/matrimony_app/web/manifest.json
+++ b/matrimony_app/web/manifest.json
@@ -1,14 +1,19 @@
 {
-    "name": "matrimony_app",
-    "short_name": "matrimony_app",
+    "name": "HeartLink.net",
+    "short_name": "HeartLink",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "This application can be used by a single person/matrimonial service company for matrimonial business to  maintain records in an electronic format. The owner of the matrimonial service company will use this  application to replace pen & paper with this flutter mobile application.",
+    "description": "This application can be used by a single person/matrimonial service company for matrimonial business to maintain records in an electronic format. The owner of the matrimonial service company will use this application to replace pen & paper with this flutter mobile application.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
+        {
+            "src": "icons/main_icon.png",
+            "sizes": "2048x2098",
+            "type": "image/png"
+        },
         {
             "src": "icons/Icon-192.png",
             "sizes": "192x192",
