--- a/matrimony_app/android/app/src/main/AndroidManifest.xml
+++ b/matrimony_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="matrimony_app"
+        android:label="HeartLink.net"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
