--- a/matrimony_app/pubspec.yaml
+++ b/matrimony_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: matrimony_app
-description: "This application can be used by a single person/matrimonial service company for matrimonial business to  maintain records in an electronic format. The owner of the matrimonial service company will use this  application to replace pen & paper with this flutter mobile application."
+description: "This application can be used by a single person/matrimonial service company for matrimonial business to maintain records in an electronic format. The owner of the matrimonial service company will use this application to replace pen & paper with this flutter mobile application."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.20.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +40,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl: ^0.20.2
+  flutter_launcher_icons: ^0.13.1
+  animated_notch_bottom_bar: ^1.0.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -47,21 +50,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.13.1
-#  flutter_native_splash: ^2.3.3
 
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/profile.png"  # ✅ Path to your new icon
-  adaptive_icon_background: "#ffa500"  # ✅ (Optional) Background color for Android adaptive icon
-  adaptive_icon_foreground: "assets/images/profile.png" # ✅ (Optional)
-
-#flutter_native_splash:
-#  image: assets/images/profile_gif.gif  # ✅ Use GIF here
-#  android: true
-#  ios: true
-#  fullscreen: true
+  image_path: "assets/icons/main_icon.png"  # ✅ Path to your new icon
+#  adaptive_icon_background: "#ffffff"  # ✅ (Optional) Background color for Android adaptive icon
+#  adaptive_icon_foreground: "assets/icons/main_icon.png" #(Optional)
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -77,6 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
