--- a/matrimony_app/pubspec.yaml
+++ b/matrimony_app/pubspec.yaml
@@ -30,8 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.20.2
+  intl: ^0.19.0
   curved_navigation_bar: ^1.0.6
+  cherry_toast: ^1.12.0
+  sqflite: ^2.4.1
+  path: ^1.9.0
+  shared_preferences: ^2.5.2
 
 
 
