--- a/matrimony_app/pubspec.yaml
+++ b/matrimony_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.19.0
   path: ^1.9.0
   shared_preferences: ^2.5.2
+  sqflite: ^2.4.0
   http: ^1.3.0
   cherry_toast: ^1.12.0
   curved_navigation_bar: ^1.0.6
